--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -94,13 +94,14 @@
         <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-orange">
                 <div class="inner">
-                    <h3> 5464 </h3>
-                    <p> New Admissions </p>
+                    <h3>Reports</h3>
+                    <p> Generate Reports </p>
                 </div>
                 <div class="icon">
-                    <i class="fa fa-user-plus" aria-hidden="true"></i>
+                    <i class="fa fa-file-text-o" aria-hidden="true"></i>
                 </div>
-                <a href="#" class="card-box-footer">View More <i class="fa fa-arrow-circle-right"></i></a>
+                <a [routerLink]="reportsLink" class="card-box-footer">View More <i
+                        class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
 
