--- a/src/app/pages/admin/admin-staff-dashboard/admin-staff-dashboard.component.html
+++ b/src/app/pages/admin/admin-staff-dashboard/admin-staff-dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-blue">
                 <div class="inner">
                     <h3>{{countData.student_count}}</h3>
@@ -14,7 +14,7 @@
             </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-red">
                 <div class="inner">
                     <h3> {{countData.user_count}} </h3>
@@ -26,7 +26,7 @@
                 <a [routerLink]="userMgtLink" class="card-box-footer">Users<i class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-orange">
                 <div class="inner">
                     <h3> New Admissions </h3>
@@ -35,10 +35,15 @@
                 <div class="icon">
                     <i class="fa fa-user-plus" aria-hidden="true"></i>
                 </div>
-                <a href="#" class="card-box-footer">Admit Student<i class="fa fa-arrow-circle-right"></i></a>
+                <a [routerLink]="createStudentLink" class="card-box-footer">Admit Student<i
+                        class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
+
+    </div>
+
+    <div class="row">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-red">
                 <div class="inner">
                     <h3>{{countData.teacher_count}}</h3>
@@ -51,10 +56,7 @@
                         class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-blue">
                 <div class="inner">
                     <h3> {{countData.lecture_count}} </h3>
@@ -68,7 +70,7 @@
             </div>
         </div>
 
-        <div class="col-lg-3 col-sm-6">
+        <div class="col-lg-4 col-sm-6">
             <div class="card-box bg-green">
                 <div class="inner">
                     <h3> Daily Schedules </h3>
@@ -81,29 +83,6 @@
                         class="fa fa-arrow-circle-right"></i></a>
             </div>
         </div>
-        <div class="col-lg-3 col-sm-6">
-            <div class="card-box bg-orange">
-                <div class="inner">
-                    <h3> 5464 </h3>
-                    <p> New Admissions </p>
-                </div>
-                <div class="icon">
-                    <i class="fa fa-user-plus" aria-hidden="true"></i>
-                </div>
-                <a href="#" class="card-box-footer">View More <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-        </div>
-        <div class="col-lg-3 col-sm-6">
-            <div class="card-box bg-red">
-                <div class="inner">
-                    <h3> 723 </h3>
-                    <p> Faculty Strength </p>
-                </div>
-                <div class="icon">
-                    <i class="fa fa-users"></i>
-                </div>
-                <a href="#" class="card-box-footer">View More <i class="fa fa-arrow-circle-right"></i></a>
-            </div>
-        </div>
+
     </div>
 </div>
