--- a/src/app/pages/teacher/view-teacher/view-teacher.component.html
+++ b/src/app/pages/teacher/view-teacher/view-teacher.component.html
@@ -56,7 +56,7 @@
                                             placeholder="Home Address">
                                     </div>
                                 </div>
-                                <button nbButton type="submit" (click)="submitEdit()">EDIT STUDENT</button>
+                                <button nbButton type="submit" (click)="submitEdit()">Update</button>
                             </form>
                         </nb-card-body>
                     </nb-card>
