--- a/src/app/pages/student/register-student/register-student.component.html
+++ b/src/app/pages/student/register-student/register-student.component.html
@@ -147,8 +147,8 @@
                         <tbody>
                             <tr *ngFor="let normalPayment of normalPayments">
                                 <td>{{normalPayment.name}}</td>
-                                <td>{{normalPayment.student_fee}}</td>
-                                <td>{{normalPayment.fixed_institute_amount}}</td>
+                                <td>Rs.{{normalPayment.student_fee}}</td>
+                                <td>Rs.{{normalPayment.fixed_institute_amount}}</td>
                                 <td>{{normalPayment.teacher_percentage}}%</td>
                             </tr>
                         </tbody>
